# bg-settings

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package.json  release.toml
.github/workflows/: release.yml
RELEASES/: 0.1.0.md  0.1.1.md  TEMPLATE_RC.md
crates/bg-cli/: Cargo.toml
crates/bg-cli/src/: main.rs
crates/bg-cli/src/interact/: backend_select.rs  mod.rs
crates/bg-cli/src/utils/: cli.rs  constants.rs  functions.rs  mod.rs
crates/bg-core/: Cargo.toml
crates/bg-core/src/: lib.rs
crates/bg-core/src/backend/: awww.rs  lib.rs  mod.rs  mpvpaper.rs  swaybg.rs
crates/bg-core/src/media/: mime.rs  mod.rs  scan.rs
crates/bg-core/src/orchestrator/: mod.rs
crates/bg-core/src/wl/: lib.rs  mod.rs  output.rs
crates/bg-core/src/wl_info/: lib.rs  mod.rs
mvp/: Cargo.toml
mvp/src/: main.rs
mvp/src/backend/: lib.rs  mod.rs  swaybg.rs
mvp/src/wl_info/: lib.rs  mod.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
