[package]
name = "bg-cli"
#version = "0.1.0"
#edition = "2024"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bg-core = { version = "0.1.1-rc.2", path = "../bg-core" }
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.29"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "signal"] }
