[package]
name = "bg-core"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
env_logger = "0.11.8"
infer = "0.19.0"
log = "0.4.29"
rand = "0.9.2"
tokio = { version = "1.48.0", features = ["time", "process", "macros", "rt", "rt-multi-thread"] }
wayland-client = "0.31.11"
which = "8.0.0"
