[package]
name = "bg-core"
#version = "0.1.0"
#edition = "2024"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
infer = "0.19.0"
log = "0.4.29"
rand = "0.9.2"
tokio = { version = "1.48.0", features = ["time", "process", "macros", "rt", "rt-multi-thread"] }
wayland-client = "0.31.11"
which = "8.0.0"
